/*
 * $Id: ChangeLog,v 1.4366 2005/09/26 09:00:00 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-09-26 09:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * xharbour/makallbc.bat
   * xharbour/makallvc.bat
     ! removed contrib/xVisual entry

2005-09-26 12:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbcmd.c
    ! fixed bug I introduced in RDDLIST()

2005-09-26 11:28 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/pp/pptable.c
    ! Added two missing defines from set.ch.

2005-09-26 01:18 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Save and restore application's active GetList.

2005-09-25 12:22 UTC-0800 Augusto Infante (august@xharbour.com)
  - Removed Contrib/xVisual
    This forlder wasn't being used anymore, I was the only one to work with it
  - Removed Contrib/What32/Demo
    No more WhatPlus.lib (3rd party libraries)

2005-09-25 18:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_tgz.sh
    * indent formatting

  * xharbour/xharbour.spec
    * updated README.RPM

  * xharbour/contrib/rdd_ads/rddads.h
  * xharbour/contrib/rdd_ads/ads1.c
    * go to phantom record if after GOTO to deleted record in ADT
      tables
    * some minor cleanups
  * xharbour/contrib/rdd_ads/adsfunc.c
    ! store callback pointer in item created by hb_itemNew()
      HB_ITEM_LOCK/HB_ITEM_UNLOCK is not structural safe when called
      more then one times - it does not count of lock numbers

  * xharbour/include/hbapi.h
    + added declaration for hb_objSendSymbol()

  * xharbour/include/hbextern.ch
    * minor cleanups

  * xharbour/source/rdd/dbcmd.c
    * fixed possibly dangerous use of C stack HB_ITEM and some minor
      optimizations

  * xharbour/source/rdd/dbf1.c