@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4366 2005/09/26 09:00:00 modalsist Exp $
+ * $Id: ChangeLog,v 1.4366 2005/09/26 12:00:14 modalsist Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-09-26 10:00 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
+  * source/vm/dbgentry.c
+    ! Added missing casts to build with MSVC
 
 2005-09-26 09:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
    * xharbour/makallbc.bat
